--- a/main.html
+++ b/main.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
   <body>
-    <script type="text/javascript" src="./script.js">
-</script>
+	  <h3 id='url'>https://localhost:8080/</h3>
+	  <form>
+		  <label for='name'>Name:</label>
+		  <input id='name' name='name'><br>
+		  <label for='year'>Graduation Year:</label>
+		  <input id='year' name='year'><br>
+		  <button id='button'>Submit</button>
+	  </form>
+    <script type="text/javascript" src="./script.js"></script>
   </body>
 
 </html>
