--- a/main.html
+++ b/main.html
@@ -4,10 +4,10 @@
 	  <h3 id='url'>https://localhost:8080/</h3>
 	  <form>
 		  <label for='name'>Name:</label>
-		  <input id='name' name='name'><br>
+		  <input id='name' type='text' name='name'><br>
 		  <label for='year'>Graduation Year:</label>
-		  <input id='year' name='year'><br>
-		  <button id='button'>Submit</button>
+		  <input id='year' type='number' name='year'><br>
+		  <button type='button' id='button'>Submit</button>
 	  </form>
     <script type="text/javascript" src="./script.js"></script>
   </body>
